# rust-project

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  Shuttle.toml
backend/src/: main.rs
frontend/: .env  README.md  index.html  tailwind.config.ts
frontend/src/components/: FloatingToolbar.tsx  ParaphraseHeader.tsx  ParaphrasingApp.tsx  TextEditor.tsx
frontend/src/pages/: Index.tsx
frontend/src/types/: api.ts
