[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.54.0"
shuttle-runtime = "0.54.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15" # ✅ for .env support during local dev
